pypi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pypiserver
  namespace: pypi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pypiserver
  template:
    metadata:
      labels:
        app: pypiserver
    spec:
      containers:
      - name: pypiserver
        image: pypiserver/pypiserver:v2.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: pypiserver-storage
          mountPath: /data/packages
      volumes:
        - name: pypiserver-storage
          persistentVolumeClaim:
            claimName: pypi-storage-pvc
